Successfully implemented line alert, changedquery to use databse connection pooling, written new api to check status of test properly
